# max-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  MaxAPI.html  README-8.2-update.md  README.md  package-info.json
source/advanced/dllexample/: CMakeLists.txt  Makefile  ReadMe.txt  _CMakeLists.txt  _mydll.vcxproj  dllcounter.cpp  dllcounter.vcxproj  dllreport.vcxproj  mydll.cpp  mydll.h
source/advanced/dllexample/_mydll.xcodeproj/: project.pbxproj
source/advanced/dllexample/dllcounter/: CMakeLists.txt
source/advanced/dllexample/dllcounter.xcodeproj/: project.pbxproj
source/advanced/dllexample/dllreport/: CMakeLists.txt  dllreport.cpp
source/advanced/dllexample/dllreport.xcodeproj/: project.pbxproj
source/matrix/: CMakeLists.txt
source/matrix/jit.3m/: CMakeLists.txt  jit.3m.c  jit.3m.h  max.jit.3m.c
source/matrix/jit.3m/jit.3m.xcodeproj/: project.pbxproj
source/matrix/jit.alphablend/: CMakeLists.txt  jit.alphablend.c  max.jit.alphablend.c
source/matrix/jit.alphablend/jit.alphablend.xcodeproj/: project.pbxproj
source/matrix/jit.change/: CMakeLists.txt  jit.change.c  max.jit.change.c
source/matrix/jit.change/jit.change.xcodeproj/: project.pbxproj
source/matrix/jit.charmap/: CMakeLists.txt  jit.charmap.c  max.jit.charmap.c
source/matrix/jit.charmap/jit.charmap.xcodeproj/: project.pbxproj
source/matrix/jit.clip/: CMakeLists.txt  jit.clip.c  max.jit.clip.c
source/matrix/jit.clip/jit.clip.xcodeproj/: project.pbxproj
source/matrix/jit.coerce/: CMakeLists.txt  jit.coerce.c  max.jit.coerce.c
source/matrix/jit.coerce/jit.coerce.xcodeproj/: project.pbxproj
source/matrix/jit.concat/: CMakeLists.txt  jit.concat.c  max.jit.concat.c
source/matrix/jit.concat/jit.concat.xcodeproj/: project.pbxproj
source/matrix/jit.demultiplex/: CMakeLists.txt  jit.demultiplex.c  max.jit.demultiplex.c
source/matrix/jit.demultiplex/jit.demultiplex.xcodeproj/: project.pbxproj
source/matrix/jit.dimmap/: CMakeLists.txt  jit.dimmap.c  max.jit.dimmap.c
source/matrix/jit.dimmap/jit.dimmap.xcodeproj/: project.pbxproj
source/matrix/jit.eclipse/: CMakeLists.txt  jit.eclipse.c  max.jit.eclipse.c
source/matrix/jit.eclipse/jit.eclipse.xcodeproj/: project.pbxproj
source/matrix/jit.fill/: CMakeLists.txt  max.jit.fill.c
source/matrix/jit.fill/jit.fill.xcodeproj/: project.pbxproj
source/matrix/jit.findbounds/: CMakeLists.txt  jit.findbounds.c  max.jit.findbounds.c
source/matrix/jit.findbounds/jit.findbounds.xcodeproj/: project.pbxproj
source/matrix/jit.fluoride/: CMakeLists.txt  jit.fluoride.c  max.jit.fluoride.c
source/matrix/jit.fluoride/jit.fluoride.xcodeproj/: project.pbxproj
source/matrix/jit.glue/: CMakeLists.txt  jit.glue.c  max.jit.glue.c
source/matrix/jit.glue/jit.glue.xcodeproj/: project.pbxproj
source/matrix/jit.gradient/: CMakeLists.txt  jit.gradient.c  max.jit.gradient.c
source/matrix/jit.gradient/jit.gradient.xcodeproj/: project.pbxproj
source/matrix/jit.hello/: CMakeLists.txt  jit.hello.c  max.jit.hello.c
source/matrix/jit.hello/jit.hello.xcodeproj/: project.pbxproj
source/matrix/jit.histogram/: CMakeLists.txt  jit.histogram.c  max.jit.histogram.c
source/matrix/jit.histogram/jit.histogram.xcodeproj/: project.pbxproj
source/matrix/jit.iter/: CMakeLists.txt  max.jit.iter.c
source/matrix/jit.iter/jit.iter.xcodeproj/: project.pbxproj
source/matrix/jit.keyscreen/: CMakeLists.txt  jit.keyscreen.c  max.jit.keyscreen.c
source/matrix/jit.keyscreen/jit.keyscreen.xcodeproj/: project.pbxproj
source/matrix/jit.la.diagproduct/: CMakeLists.txt  max.jit.la.diagproduct.c
source/matrix/jit.map/: CMakeLists.txt  jit.map.c  max.jit.map.c
source/matrix/jit.noise/: CMakeLists.txt  jit.noise.c  max.jit.noise.c
source/matrix/jit.notify/: CMakeLists.txt  jit.notify.c  max.jit.notify.c
source/matrix/jit.op/: CMakeLists.txt  max.jit.op.c
source/matrix/jit.op/jit.op.xcodeproj/: project.pbxproj
source/matrix/jit.p.bounds/: CMakeLists.txt  jit.p.bounds.c  max.jit.p.bounds.c
source/matrix/jit.pack/: CMakeLists.txt  jit.pack.c  max.jit.pack.c
source/matrix/jit.peek~/: CMakeLists.txt  max.jit.peek~.c
source/matrix/jit.poke~/: CMakeLists.txt  jit.poke~.vcxproj  max.jit.poke~.c
source/matrix/jit.print/: CMakeLists.txt  jit.print.c  max.jit.print.c
source/matrix/jit.rgb2luma/: CMakeLists.txt  jit.rgb2luma.c  max.jit.rgb2luma.c
source/matrix/jit.scalebias/: CMakeLists.txt  jit.scalebias.c  max.jit.scalebias.c
source/matrix/jit.scissors/: CMakeLists.txt  jit.scissors.c  max.jit.scissors.c
source/matrix/jit.spill/: CMakeLists.txt  jit.spill.c  max.jit.spill.c
source/matrix/jit.split/: CMakeLists.txt  jit.split.c  max.jit.split.c
source/matrix/jit.str.op/: CMakeLists.txt  jit.str.op.c  jit.str.op.func.c  jit.str.op.h  max.jit.str.op.c
source/matrix/jit.submatrix/: CMakeLists.txt  jit.submatrix.c  max.jit.submatrix.c
source/matrix/jit.textfile/: CMakeLists.txt  jit.textfile.c  max.jit.textfile.c
source/matrix/jit.thin/: CMakeLists.txt  jit.thin.c  max.jit.thin.c
source/matrix/jit.transpose/: CMakeLists.txt  jit.transpose.c  jit.transpose.vcxproj  max.jit.transpose.c
source/matrix/jit.turtle/: CMakeLists.txt  max.jit.turtle.c
source/matrix/jit.unpack/: CMakeLists.txt  jit.unpack.c  max.jit.unpack.c
source/matrix/simplejit/: CMakeLists.txt  jit.simple.cpp  jit.simple.vcxproj  max.jit.simple.c
source/matrix/simplejit~/: CMakeLists.txt  jit.simple~.cpp  max.jit.simple~.c
source/misc/: CMakeLists.txt
source/misc/buddy/: CMakeLists.txt  buddy.c
source/misc/filedate/: CMakeLists.txt  filedate.c
source/misc/filein/: CMakeLists.txt  filein.c
source/misc/folder/: CMakeLists.txt  folder.c
source/misc/iter/: CMakeLists.txt  iter.c
source/misc/master/: CMakeLists.txt  master.c
source/misc/match/: CMakeLists.txt  match.c
source/misc/minimum/: CMakeLists.txt  minimum.c
source/misc/past/: CMakeLists.txt  past.c
source/misc/servant/: CMakeLists.txt  servant.c
source/misc/thresh/: CMakeLists.txt  thresh.c
source/misc/vexpr/: CMakeLists.txt  vexpr.c
source/misc/windowwatcher/: CMakeLists.txt  windowwatcher.c
(+1200 files in other folders)
