add_subdirectory(jit.3m)
add_subdirectory(jit.alphablend)
add_subdirectory(jit.change)
add_subdirectory(jit.charmap)
add_subdirectory(jit.clip)
add_subdirectory(jit.coerce)
add_subdirectory(jit.concat)
add_subdirectory(jit.demultiplex)
add_subdirectory(jit.dimmap)
add_subdirectory(jit.eclipse)
add_subdirectory(jit.fill)
add_subdirectory(jit.findbounds)
add_subdirectory(jit.fluoride)
add_subdirectory(jit.glue)
add_subdirectory(jit.gradient)
add_subdirectory(jit.hello)
add_subdirectory(jit.histogram)
add_subdirectory(jit.iter)
add_subdirectory(jit.keyscreen)
add_subdirectory(jit.la.diagproduct)
add_subdirectory(jit.map)
add_subdirectory(jit.noise)
add_subdirectory(jit.notify)
add_subdirectory(jit.op)
add_subdirectory(jit.p.bounds)
add_subdirectory(jit.pack)
add_subdirectory(jit.peek~)
add_subdirectory(jit.print)
add_subdirectory(jit.rgb2luma)
add_subdirectory(jit.scalebias)
add_subdirectory(jit.spill)
add_subdirectory(jit.split)
add_subdirectory(jit.str.op)
add_subdirectory(jit.submatrix)
add_subdirectory(jit.textfile)
add_subdirectory(jit.thin)
add_subdirectory(jit.transpose)
add_subdirectory(jit.turtle)
add_subdirectory(jit.unpack)
add_subdirectory(simplejit)
add_subdirectory(simplejit~)

