add_subdirectory(buddy)
add_subdirectory(filedate)
add_subdirectory(filein)
add_subdirectory(folder)
add_subdirectory(iter)
add_subdirectory(master)
add_subdirectory(match)
add_subdirectory(minimum)
add_subdirectory(past)
add_subdirectory(servant)
add_subdirectory(thresh)
add_subdirectory(vexpr)
add_subdirectory(windowwatcher)

